--- a/doyouagree/en.lproj/MainStoryboard.storyboard
+++ b/doyouagree/en.lproj/MainStoryboard.storyboard
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="13A569" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
+        <deployment defaultVersion="1536" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
         <!--Dya View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="dyaViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bVL-U6-KvG"/>
+                        <viewControllerLayoutGuide type="bottom" id="ddY-EO-dCD"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" highlighted="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DMH-Zt-wKy">
+                                <rect key="frame" x="169" y="162" width="131" height="30"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" none="YES" keyboardKey="YES" updatesFrequently="YES"/>
                                 </accessibility>
@@ -26,6 +32,7 @@
                                 </connections>
                             </textField>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Enter Code" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kIi-Nc-YRg">
+                                <rect key="frame" x="20" y="166" width="141" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="IwK-tI-eL8"/>
                                 </constraints>
@@ -34,6 +41,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Not Logged in" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hqG-Is-eVM">
+                                <rect key="frame" x="20" y="53" width="109" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -41,11 +49,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="DMH-Zt-wKy" firstAttribute="leading" secondItem="kIi-Nc-YRg" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="Ftv-c2-Qul"/>
+                            <constraint firstItem="DMH-Zt-wKy" firstAttribute="leading" secondItem="kIi-Nc-YRg" secondAttribute="trailing" constant="8" symbolic="YES" id="Ftv-c2-Qul"/>
                             <constraint firstItem="DMH-Zt-wKy" firstAttribute="top" secondItem="3" secondAttribute="top" constant="162" id="HkK-QD-eLZ"/>
-                            <constraint firstItem="kIi-Nc-YRg" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="cUD-Ru-B7l"/>
-                            <constraint firstAttribute="trailing" secondItem="DMH-Zt-wKy" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="cWc-0P-fjR"/>
-                            <constraint firstItem="hqG-Is-eVM" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="pRh-gN-sPu"/>
+                            <constraint firstItem="kIi-Nc-YRg" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" id="cUD-Ru-B7l"/>
+                            <constraint firstAttribute="trailing" secondItem="DMH-Zt-wKy" secondAttribute="trailing" constant="20" symbolic="YES" id="cWc-0P-fjR"/>
+                            <constraint firstItem="hqG-Is-eVM" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" id="pRh-gN-sPu"/>
                             <constraint firstItem="kIi-Nc-YRg" firstAttribute="top" secondItem="3" secondAttribute="top" constant="166" id="rcT-6g-T5M"/>
                             <constraint firstItem="hqG-Is-eVM" firstAttribute="top" secondItem="3" secondAttribute="top" constant="53" id="wle-Nd-2Ci"/>
                         </constraints>
@@ -64,25 +72,32 @@
         <scene sceneID="kjD-aE-7RD">
             <objects>
                 <viewController id="inp-wL-rrB" customClass="dyaWebView" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9WG-Sf-J5L"/>
+                        <viewControllerLayoutGuide type="bottom" id="syZ-uO-qYG"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="ktQ-s0-ngJ">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nN2-Ag-WqT">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="357"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="357" id="MAs-5p-0C1"/>
                                 </constraints>
                             </webView>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="1uU-Qb-1jP">
-                                <color key="minimumTrackTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="maximumTrackTintColor" red="0.99995561079999995" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="18" y="365" width="284" height="34"/>
+                                <color key="minimumTrackTintColor" red="0.74473369410000001" green="0.1396687784" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="maximumTrackTintColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="thumbTintColor" white="0.75712819343065696" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <action selector="sliderValue:" destination="inp-wL-rrB" eventType="valueChanged" id="Uug-WK-5ah"/>
                                 </connections>
                             </slider>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="I Agree : 50%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IxN-Sk-X3p">
+                                <rect key="frame" x="108" y="406" width="104" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="104" id="EON-lb-MIZ"/>
                                     <constraint firstAttribute="height" constant="17" id="mvc-fw-44I"/>
@@ -92,50 +107,38 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RLy-IA-YAN">
+                                <rect key="frame" x="210" y="434" width="100" height="37"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="BBV-7U-LEc"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Agree">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="okButton:" destination="inp-wL-rrB" eventType="touchUpInside" id="hOu-5b-43R"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dT3-uM-3e0">
+                                <rect key="frame" x="20" y="434" width="64" height="37"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="64" id="NUt-Oj-CY0"/>
                                     <constraint firstAttribute="height" constant="37" id="STH-VR-8IJ"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Back">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <segue destination="iLL-wN-T9Z" kind="unwind" unwindAction="returnToCodeEntry:" id="SmC-7G-WNt"/>
                                 </connections>
                             </button>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageWhenHighlighted="NO" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZZj-5s-uGX">
+                                <rect key="frame" x="102" y="435" width="100" height="38"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="38" id="NeQ-ul-Hec"/>
                                     <constraint firstAttribute="width" constant="100" id="OaF-aN-DiB"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" backgroundImage="FB-LikeButton-online-114.png">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="share:" destination="inp-wL-rrB" eventType="touchUpInside" id="owR-lj-cDU"/>
@@ -144,21 +147,21 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="nN2-Ag-WqT" firstAttribute="trailing" secondItem="ktQ-s0-ngJ" secondAttribute="trailing" type="default" id="1Lb-ui-F0K"/>
-                            <constraint firstItem="dT3-uM-3e0" firstAttribute="leading" secondItem="ktQ-s0-ngJ" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="6qY-Xi-QJL"/>
-                            <constraint firstItem="nN2-Ag-WqT" firstAttribute="leading" secondItem="ktQ-s0-ngJ" secondAttribute="leading" type="default" id="7Rf-Yx-lxu"/>
-                            <constraint firstItem="1uU-Qb-1jP" firstAttribute="leading" secondItem="ktQ-s0-ngJ" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="CH4-Uu-ejy"/>
-                            <constraint firstItem="RLy-IA-YAN" firstAttribute="leading" secondItem="ZZj-5s-uGX" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="G0a-Ys-dWU"/>
-                            <constraint firstItem="nN2-Ag-WqT" firstAttribute="top" secondItem="ktQ-s0-ngJ" secondAttribute="top" type="default" id="Ilo-Sq-qUn"/>
+                            <constraint firstItem="nN2-Ag-WqT" firstAttribute="trailing" secondItem="ktQ-s0-ngJ" secondAttribute="trailing" id="1Lb-ui-F0K"/>
+                            <constraint firstItem="dT3-uM-3e0" firstAttribute="leading" secondItem="ktQ-s0-ngJ" secondAttribute="leading" constant="20" symbolic="YES" id="6qY-Xi-QJL"/>
+                            <constraint firstItem="nN2-Ag-WqT" firstAttribute="leading" secondItem="ktQ-s0-ngJ" secondAttribute="leading" id="7Rf-Yx-lxu"/>
+                            <constraint firstItem="1uU-Qb-1jP" firstAttribute="leading" secondItem="ktQ-s0-ngJ" secondAttribute="leading" constant="20" symbolic="YES" id="CH4-Uu-ejy"/>
+                            <constraint firstItem="RLy-IA-YAN" firstAttribute="leading" secondItem="ZZj-5s-uGX" secondAttribute="trailing" constant="8" symbolic="YES" id="G0a-Ys-dWU"/>
+                            <constraint firstItem="nN2-Ag-WqT" firstAttribute="top" secondItem="ktQ-s0-ngJ" secondAttribute="top" id="Ilo-Sq-qUn"/>
                             <constraint firstItem="ZZj-5s-uGX" firstAttribute="leading" secondItem="ktQ-s0-ngJ" secondAttribute="leading" constant="102" id="ZXU-qg-p5W"/>
                             <constraint firstAttribute="bottom" secondItem="ZZj-5s-uGX" secondAttribute="bottom" constant="7" id="ZvP-Qa-qOg"/>
-                            <constraint firstAttribute="trailing" secondItem="1uU-Qb-1jP" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="a54-cL-1hj"/>
-                            <constraint firstItem="1uU-Qb-1jP" firstAttribute="centerX" secondItem="IxN-Sk-X3p" secondAttribute="centerX" type="default" id="dHc-3F-Drz"/>
-                            <constraint firstItem="1uU-Qb-1jP" firstAttribute="top" secondItem="nN2-Ag-WqT" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="hzn-fM-at3"/>
-                            <constraint firstItem="RLy-IA-YAN" firstAttribute="top" secondItem="dT3-uM-3e0" secondAttribute="top" type="default" id="kbl-n0-Ajf"/>
-                            <constraint firstItem="IxN-Sk-X3p" firstAttribute="top" secondItem="1uU-Qb-1jP" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="rDp-re-m8i"/>
+                            <constraint firstAttribute="trailing" secondItem="1uU-Qb-1jP" secondAttribute="trailing" constant="20" symbolic="YES" id="a54-cL-1hj"/>
+                            <constraint firstItem="1uU-Qb-1jP" firstAttribute="centerX" secondItem="IxN-Sk-X3p" secondAttribute="centerX" id="dHc-3F-Drz"/>
+                            <constraint firstItem="1uU-Qb-1jP" firstAttribute="top" secondItem="nN2-Ag-WqT" secondAttribute="bottom" constant="8" symbolic="YES" id="hzn-fM-at3"/>
+                            <constraint firstItem="RLy-IA-YAN" firstAttribute="top" secondItem="dT3-uM-3e0" secondAttribute="top" id="kbl-n0-Ajf"/>
+                            <constraint firstItem="IxN-Sk-X3p" firstAttribute="top" secondItem="1uU-Qb-1jP" secondAttribute="bottom" constant="8" symbolic="YES" id="rDp-re-m8i"/>
                             <constraint firstAttribute="bottom" secondItem="dT3-uM-3e0" secondAttribute="bottom" constant="9" id="tma-kk-PTY"/>
-                            <constraint firstItem="dT3-uM-3e0" firstAttribute="bottom" secondItem="RLy-IA-YAN" secondAttribute="bottom" type="default" id="w5f-Dh-I97"/>
+                            <constraint firstItem="dT3-uM-3e0" firstAttribute="bottom" secondItem="RLy-IA-YAN" secondAttribute="bottom" id="w5f-Dh-I97"/>
                         </constraints>
                     </view>
                     <connections>
